# docblock-rag-platform

./: .dockerignore  .gitignore  README.md  SECURITY.md  TODO.md
.claude/: settings.local.json
.github/workflows/: build-push.yml
deployments/: GHCR-CREDENTIALS.md  RUNBOOK.md  build-all.sh  k8s-down.sh  k8s-setup.sh  push-all.sh
deployments/compose/: .env.example  docker-compose.yml  litellm_config.yaml
deployments/k8s/: 00-namespace.yaml  02-configmap.yaml  03-pv-pvc.yaml  03b-postgres.yaml  (+10 more)
docs/: README.md  api-reference.md  architecture.md  deployment.md  document-api-frontend-guide.md  internal-logic.md
libs/docblock-core/: pyproject.toml
libs/docblock-core/docblock_core/: __init__.py  acl.py  authz.py  chunk_builder.py  clip_embed.py  config.py  gen_sum.py  ingest.py  jobs.py  llm_http.py  logging_utils.py  marker_runner.py  md_semantic_chunk_plus.py  pipeline.py  rag.py  search.py  sql_utils.py  storage.py
libs/docblock-core/tests/: test_authz.py
pipelines/: docblock_rag_pipeline.py
scripts/: build-all.sh  dev-up.sh  migrate_embedding_768.sql  migrate_fb1_nodes_acl.sql  migrate_fb5_drop_legacy.sql  migrate_fb6_department_admins.sql  reembed.py
tests/: 01_health_check.py  02_documents_list.py  03_upload_pipeline.py  04_acl_write_delete.py  05_search_acl.py  06_search_user_override.py  07_search_open.py  08_rag_answer.py  09_ingest_stages.py  10_document_delete.py  11_webhook_user_sync.py  12_reupload_same_docid.py  12_reupload_same_document.py  13_department_admins.py  13_marker_service.py  14_nostr_proxy.py  README.md  config.py  test_all.sh
(+64 files in other folders)
